# raspberry-display

./: .gitignore  .gitmodules  .travis.yml  DISPLAY_STABILITY_FIXES.md  Dockerfile  FONT_EDITING.md  Makefile  Makefile.pi-zero  README.md  TRANSITIONS.md  build-minimal-resources.sh  build-on-similar-pi.sh  build-pi-zero-efficient.sh  container-dev  curses-client.c  display.c  display.h  docker-dev.sh  fifo-client.c  font.h  font_render.c  font_render.h  ht1632.c  install-prereqs-debian.sh  install-wiringPi.sh  meson.build  mock-display.c  setup-distcc.sh
.devcontainer/: devcontainer.json
http-api/: RaspberryDisplay.py  server.py  test.py
python-client/: MatrixDisplay.py  RaspberryDisplay.py  frontend.py
src/: Makefile  curses-client.c  curses-client.cpp  debug_util.cpp  debug_util.hpp  display.c  display.cpp  display.h  display.hpp  display_impl.hpp  fifo-client.c  fifo-client.cpp  fifo-client.h  fifo-client.hpp  font.cpp  font.h  font.hpp  ha_discovery.cpp  ha_discovery.hpp  ht1632.c  ht1632.cpp  ht1632.h  ht1632.hpp  log_util.hpp  mock-display.c  mock-display.cpp  mqtt-client.cpp  pong.cpp  pong.hpp  sequence.cpp  sequence.hpp  test_ht1632.c  test_main.cpp  timer.cpp  timer.hpp  transition.cpp  transition.hpp  utf8_converter.cpp  utf8_converter.hpp  websocket.cpp  (+1 more)
src/display/: display.cpp  display.hpp  display_impl.hpp  font.cpp  font.hpp  font_generated.hpp  sequence.cpp  sequence.hpp  transition.cpp  transition.hpp
src/test/: test_cyclic_list.cpp  test_display.cpp  test_font.cpp  test_main.cpp  test_sequence.cpp  test_snapshot_map.cpp  test_transition.cpp
src/util/: cyclic_list.hpp  log_util.hpp  snapshot_map.hpp  timer.cpp  timer.hpp  utf8_converter.cpp
systemd/: environment.conf  raspberry-display-server.service  raspberry-display.service
tools/: display_diagnostics.py  extract_font.py  font_definitions.txt  font_generator.py
